# drf_shop_api

./: .gitignore  README.md  pyproject.toml  pytest.ini
account/: models.py  serializer.py  urls.py  utils.py  views.py
account/services/: customuser_service.py
account/tests/services/: test_customuser_service.py
account/tests/views/: test_customuser_view.py
like/: models.py  serializer.py  urls.py  views.py
like/services/: like_service.py
product/: admin.py  models.py  serializer.py  urls.py  views.py
product/services/: product_service.py
shop/: settings.py  urls.py
