[tool.poetry]
name = "wk26_drf_shop"
version = "0.1.0"
description = "Commerce RESTful api with django and djangorestframework"
authors = ["sahayana <saokhueyang@gmail.com:>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
djangorestframework = "^3.13.1"
django-extensions = "^3.1.5"
djangorestframework-simplejwt = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
